kakao practice css

--- a/friends.html
+++ b/friends.html
@@ -96,7 +96,12 @@
   <div id="splash-screen">
     <i class="fas fa-comment fa-2x"></i>
   </div>
-  
+  <div id="only-mobile">
+    <span>too big</span>
+  </div>
+  <div id="only-portrait">
+    <span>세로전환</span>
+  </div>
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
   
