--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     <input type="submit" value="Log in">
     <a href="#">Find kakao Acouct or Password</a>
   </form>
-
+  <div id="only-mobile">
+    <span>too big</span>
+  </div>
+  <div id="only-portrait">
+    <span>세로전환</span>
+  </div>
   
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
