--- a/more.html
+++ b/more.html
@@ -96,7 +96,12 @@
     </ul>
   </nav>
 
-  
+  <div id="only-mobile">
+    <span>too big</span>
+  </div>
+  <div id="only-portrait">
+    <span>세로전환</span>
+  </div>
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
   
