kakao practice html

--- a/chats.html
+++ b/chats.html
@@ -71,7 +71,12 @@
       <li class="nav__btn"><span class="nav__alarm badge badge--sm"></span><a class="nav__link"href="more.html"><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
     </ul>
   </nav>
-
+  <div id="only-mobile">
+    <span>too big</span>
+  </div>
+  <div id="only-portrait">
+    <span>세로전환</span>
+  </div>
   
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
