--- a/chat.html
+++ b/chat.html
@@ -76,8 +76,12 @@
 
   </form>
 
-  
-
+  <div id="only-mobile">
+    <span>too big</span>
+  </div>
+  <div id="only-portrait">
+    <span>세로전환</span>
+  </div>
   
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
