kakao practice html

--- a/chat.html
+++ b/chat.html
@@ -62,26 +62,26 @@
     
   </main>
   
-  <form class="reply-input">
+  <form class="reply">
 
     <div class="reply__column">
       <i class="far fa-plus-square"></i>
     </div>
 
     <div class="reply__column">
-      <input type="text" placeholder="Write message">
+      <input type="text" placeholder="Write a message">
       <i class="far fa-smile"></i>
       <button><i class="fas fa-arrow-up"></i></button>
     </div>
 
   </form>
-
   <div id="only-mobile">
     <span>too big</span>
   </div>
   <div id="only-portrait">
     <span>세로전환</span>
-  </div>
+  </div> 
+
   
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
