--- a/friends.html
+++ b/friends.html
@@ -98,7 +98,7 @@
   </div>
   
   <div id="only-mobile">
-    <span>too big</span>
+    <span>too big ~~~</span>
   </div>
   <div id="only-portrait">
     <span>세로전환</span>
