--- a/index.html
+++ b/index.html
@@ -40,14 +40,12 @@
     <input name="username" type="text" placeholder="Email or phone number">
     <input name="password" type="password" placeholder="Password">
     <input type="submit" value="Log in">
-    <a href="#">Find kakao Acouct or Password</a>
+    <a href="#">Find kakao Account or Password</a>
   </form>
   <div id="only-mobile">
     <span>too big</span>
   </div>
-  <div id="only-portrait">
-    <span>세로전환</span>
-  </div> 
+  
 
   <script src="https://kit.fontawesome.com/ebea5ebe79.js" crossorigin="anonymous"></script>
   
